base/argo-cd/base/repo-server/argocd-repo-server-service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /argocd-repo-server
  labels:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: repo-server
  name: argocd-repo-server
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|argocd-repo-server'
spec:
  ports:
  - name: server
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: metrics
    protocol: TCP
    port: 8084
    targetPort: 8084
  selector:
    app.kubernetes.io/name: argocd-repo-server
