base/argo-cd/base/repo-server/argocd-repo-server-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: # kpt-merge: /argocd-repo-server-network-policy
  name: argocd-repo-server-network-policy
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|default|argocd-repo-server-network-policy'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-notifications-controller
    ports:
    - protocol: TCP
      port: 8081
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8084
